switched to angular 6 completely

--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "@angular/http": "6.0.7",
     "@angular/platform-browser": "6.0.7",
     "@angular/platform-browser-dynamic": "6.0.7",
+    "@angular/platform-server": "^6.0.7",
     "@angular/router": "6.0.7",
-    "@ngrx/effects": "^5.2.0",
+    "@ngrx/effects": "^6.0.1",
     "@ngrx/router-store": "^6.0.1",
-    "@ngrx/store": "^5.2.0",
+    "@ngrx/store": "^6.0.1",
     "@ngrx/store-devtools": "^6.0.1",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "firebase": "^4.13.1",
     "rxjs": "^6.2.1",
+    "ts-loader": "^4.4.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
