--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,7 @@
     "@angular/http": "6.0.7",
     "@angular/platform-browser": "6.0.7",
     "@angular/platform-browser-dynamic": "6.0.7",
-    "@angular/platform-server": "^6.0.7",
+    "@angular/platform-server": "^6.0.9",
     "@angular/router": "6.0.7",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/router-store": "^6.0.1",
@@ -29,12 +30,14 @@
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "firebase": "^4.13.1",
     "rxjs": "^6.2.1",
     "ts-loader": "^4.4.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular-devkit/core": "0.6.8",
     "@angular/cli": "6.0.8",
     "@angular/compiler-cli": "6.0.7",
@@ -55,6 +58,6 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
     "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "webpack-cli": "^3.0.8"
   }
 }
